[tool.poetry]
name = "reguleque-core"
version = "0.1.0"
description = "Reguleque core app"
authors = ["Jonatas Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
uvicorn = "*"
fastapi = "0.68.1"
asyncpg = "*"
loguru = "*"
dynaconf = "3.1.4"
pydantic = "^1.*"
gunicorn = "^20.*"
psycopg2-binary = "^2.*"
alembic = "^1.*"
sqlalchemy = "*"
requests = "*"
locust = "*"
httpx = "*"
python-jose = {version = "^3.3.0", extras = ["cryptograpy"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
sqlalchemy-stubs = "^0.4"

[tool.poetry.dev-dependencies]
jedi = "*"
ipdb = "*"
neovim = "*"
pep8 = "*"
flake8 = "*"
pylint = "*"
mypy = "*"
isort = "*"
autoflake = "*"
sqlalchemy-stubs = "*"
pytest = "6.2.4"
pytest-cov = "*"
pytest-watch = "*"
pytest-sugar = "*"
pytest-mock = "*"
prospector = {version = "^1.3.1", extras = ["with_with_pyroma", "with_vulture", "with_frosted", "with_mypy", "with_bandit"]}
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
colorama = "0.3.9"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 160

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
